--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -1173,7 +1173,9 @@ html
     font-size: 17px
 .customer-support__right-wrapper 
     padding-top: 64px
-    
+.expenses__left__img-small 
+        max-width: 280px
+        left: 224px 
     
     
 .flex-top 
