--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -753,29 +753,21 @@ html
     margin-bottom: 80px
     &__container
         position: relative
-        z-index: 0
+        margin: 0 auto
         max-width: 1156px
+        max-height: 438px
         width: 100%
-        background-color: $color-blue
-        border-radius: 8px
+        height: 100%
+        background: #357EFE
         overflow: hidden
-    &__img-index1
-        position: absolute
-        max-width: 640px
-        max-height: 640px
-        width: 100%
-        top: 0px
-        left: 580px
-        z-index: 1
-    &__img-index2
-        position: absolute
-        top: 200px
-        z-index: 2
-    &__img-index3
-        position: absolute
-        top: 200px
-        right: 0px
-        z-index: 2
+        z-index: 0
+        &-left
+            position: absolute
+            max-width: 40px
+            max-height: 40px
+            width: 100%
+            height: 100%
+            z-index: 30
 .reviews-header
     &__h2
         text-align: center
@@ -784,22 +776,35 @@ html
         font-weight: 600
         line-height: 120%
         margin-bottom: 40px 
-    
 .reviews-main
-    &__text
-        text-align: left
-        padding: 120px
-        &__h3
-            color: rgb(255, 255, 255)
-            font-size: 28px
-            font-weight: 700
-            line-height: 140%
-            margin-bottom: 64px
-        &__p
-            color: rgb(255, 255, 255)
-            font-size: 17px
-            font-weight: 700
-            line-height: 140%
+    display: flex
+    justify-content: space-between
+    align-items: center
+.reviews-main__text
+    text-align: left
+    padding-left: 104px
+    padding-bottom: 200px
+    &__h3
+        font-size: 30px
+        font-weight: 700
+        line-height: 140%
+        color: #FFFFFF
+        margin-bottom: 20px
+    &__p
+        font-size: 17px
+        font-weight: 700
+        line-height: 140%
+        color: #FFFFFF
+.reviews-main__imgs
+    position: relative
+    left: 57px
+    max-width: 640px
+    max-height: 640px
+    width: 100%
+    height: 100%
+    &-index1
+        width: 100%
+        height: 100%
 /* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer
     background-color: #1A1D25
@@ -1174,6 +1179,8 @@ html
         gap: 11px
     .flex-top__item 
         font-size: 13px
+    .reviews-main
+        flex-direction: column-reverse
 
 @media (max-width: 575px)
     .container
