--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -761,13 +761,6 @@ html
         background: #357EFE
         overflow: hidden
         z-index: 0
-        &-left
-            position: absolute
-            max-width: 40px
-            max-height: 40px
-            width: 100%
-            height: 100%
-            z-index: 30
 .reviews-header
     &__h2
         text-align: center
@@ -805,6 +798,23 @@ html
     &-index1
         width: 100%
         height: 100%
+.eighth-section__imgs-index2
+    position: absolute
+    max-width: 104px
+    max-height: 104px
+    width: 100%
+    height: 100%
+    top: 182px
+    z-index: 1
+.eighth-section__imgs-index3
+    position: absolute
+    z-index: 2
+    right: 0px
+    top: 187px
+    max-width: 104px
+    max-height: 104px
+    width: 100%
+    height: 100%
 /* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer
     background-color: #1A1D25
