--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -749,6 +749,58 @@ html
     margin-bottom: 8px
 
 /* значения для восьмой секции (восьмая секция) */
+.reviews-header
+    text-align: center
+    &__h3
+        font-weight: 600
+        font-size: 48px
+        line-height: 120%
+        margin-bottom: 12px
+.reviews-container
+    margin: 0 auto
+    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
+    max-width: 1156px
+    max-height: 438px
+    width: 100%
+    height: auto
+    background-color: #357EFE
+    overflow: hidden
+    border-radius: 8px
+    margin-bottom: 40px
+    &__left
+        text-align: left
+        padding: 20px
+        &__first
+            font-weight: 700
+            font-size: 28px
+            line-height: 140%
+            color: #FFFFFF
+            margin-bottom: 20px
+        &__name
+            font-weight: 700
+            font-size: 17px
+            line-height: 140%
+            color: #FFFFFF
+        &__wb
+            font-weight: 500
+            font-size: 17px
+            line-height: 140%
+            color: #FFFFFF
+    &__right
+        flex: 1
+        position: relative
+        left: 118px
+        max-width: 640px
+        max-height: 640px
+        width: 100%
+        height: 100%
+        &__img
+            width: 100%
+            height: 100%
+            object-fit: cover
 
 /* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer
@@ -890,15 +942,11 @@ html
         font-size: 15px
     .calculation_background
         padding: 6px
+
+    .reviews-container__right
+        left: 86px
     
-    .reviews-header__h2
-        font-size: 44px
-    .eighth-section__img-index1
-        left: 490px
-    .reviews-main__text__h3
-        font-size: 24px
-    .reviews-main__text__p
-        font-size: 15px
+
 
     .footer
         padding-top: 70px
@@ -958,8 +1006,14 @@ html
         margin-bottom: 20px
         &:last-child
             margin: 0px
-    .reviews-main__text
-        padding-left: 48px
+    .reviews-container__left__first
+        font-size: 24px
+    .reviews-container__left__name
+        font-size: 15px
+    .reviews-container__left__wb
+        font-size: 15px 
+    .reviews-container__right
+        left: 13px
     .eighth-section__img-index1
         max-width: 446px
         width: 100%
@@ -1119,7 +1173,17 @@ html
         padding-top: 64px
     .expenses__left__img-small 
         max-width: 280px
-        left: 224px    
+        left: 224px  
+
+    .reviews-container__left
+        padding: 10px
+    .reviews-container__left__first
+        font-size: 20px
+    .reviews-container__left__name
+        font-size: 14px
+    .reviews-container__left__wb
+        font-size: 14px
+
     .flex-top 
         gap: 11px
     .flex-top__item 
