--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -1193,4 +1193,16 @@ html
 @media (max-width: 575px)
     .container
         width: 100%
-    
+    .main-section__reg 
+        top: 474px
+    .expenses__left__img-small 
+        max-width: 156px
+        left: 173px
+        bottom: 104px
+    .time-saving__intermediate-level__dop 
+        max-width: 163px
+    .time-saving__intermediate-level__gop 
+        left: 115px
+        top: 54px
+    .reviews-container
+        flex-direction: column-reverse
